# src/main/kotlin/com/example/application/dto/GroupRequest.kt
@@ -3,5 +3,7 @@ package com.example.application.dto
 data class GroupRequest(
     val name: String,
     val description: String = "",
-    val createdBy: String
+    val createdBy: String,
+    val creatorName: String,
+    val creatorEmail: String
 )
